FourU5/02_terraform/06_servers.tf
#Bastion
resource "aws_instance" "bastion" {
  ami                         = var.ami_id
  instance_type               = var.bastion_instance_type
  subnet_id                   = module.vpc.public_subnets[0]
  private_ip                  = var.bastion_private_ip
  associate_public_ip_address = "true"
  security_groups             = [aws_security_group.ssh.id]
  key_name                    = aws_key_pair.k8_ssh.key_name

  ##https://github.com/hashicorp/terraform/issues/30134
  user_data = <<-EOF
                #!bin/bash
                echo "PubkeyAcceptedKeyTypes=+ssh-rsa" >> /etc/ssh/sshd_config.d/10-insecure-rsa-keysig.conf
                systemctl reload sshd
                echo "${tls_private_key.ssh.private_key_pem}" >> /home/ubuntu/.ssh/id_rsa
                chown ubuntu /home/ubuntu/.ssh/id_rsa
                chgrp ubuntu /home/ubuntu/.ssh/id_rsa
                chmod 600   /home/ubuntu/.ssh/id_rsa
                echo "starting ansible install"
                apt-add-repository ppa:ansible/ansible -y
                apt update
                apt install ansible -y
                EOF
  tags = {
    Name = "Bastion"
  }
}

#Master
resource "aws_instance" "masters" {
  count           = var.master_node_count
  ami             = var.ami_id
  instance_type   = var.master_instance_type
  subnet_id       = element(module.vpc.private_subnets, count.index)
  private_ip      = element(var.master_private_ips, count.index)
  key_name        = aws_key_pair.k8_ssh.key_name
  security_groups = [aws_security_group.k8_nondes.id, aws_security_group.k8_masters.id]

  tags = {
    Name = format("Master-%02d", count.index + 1)
  }
}

#Worker
resource "aws_instance" "workers" {
  count           = var.worker_node_count
  ami             = var.ami_id
  instance_type   = var.worker_instance_type
  subnet_id       = element(module.vpc.private_subnets, count.index)
  private_ip      = element(var.worker_private_ips, count.index)
  key_name        = aws_key_pair.k8_ssh.key_name
  security_groups = [aws_security_group.k8_nondes.id, aws_security_group.k8_workers.id]

  tags = {
    Name = format("Worker-%02d", count.index + 1)
  }
}
